--- a/chrome/global/tweaks.css
+++ b/chrome/global/tweaks.css
@@ -140,7 +140,7 @@ bugs with certain themes eg. dark text on dark background.) */
     }
   }
 
-  :root:is([inFullscreen], [drawtitle]) {
+  :root:is([inFullscreen], :not([customtitlebar])) {
     --uc-tab-top-margin: 4px !important;
   }
 
