--- a/chrome/toolbar/tabbar.css
+++ b/chrome/toolbar/tabbar.css
@@ -11,7 +11,7 @@
   /* Remove extra space at the top of the window when in fullscreen or when
    * title bars are enabled. */
   &[inFullscreen],
-  &[drawtitle] {
+  &:not([customtitlebar]) {
     --uc-tab-top-margin: 0px !important;
   }
 
@@ -675,7 +675,7 @@
    * if the menu bar is not permanently enabled. */
   @media (-moz-platform: windows),
   (-moz-gtk-csd-available) and (not (-moz-gtk-csd-reversed-placement)) {
-    :root:not([drawtitle]) #toolbar-menubar:not([autohide="false"]) ~ #TabsToolbar & {
+    :root[customtitlebar] #toolbar-menubar:not([autohide="false"]) ~ #TabsToolbar & {
       background: var(--uc-gradient-alt);
     }
   }
